@@ -1,0 +1,3 @@
+<h2>Fin de la configuration</h2>
+<p>Félicitations. Vous venez d'installer <strong>Piwam</strong> correctement</p>.
+<p>Vous pouvez dès maintenant <?php echo link_to('enregistrer votre association', 'association/new') ?>.</p>
